build: trigger cc-docker-ksql build as separate job